engr441/while-jvm/tests/valid/OrAnd_Valid_1.while
bool fail() {
    assert false;
    return true;
}

void andTest() {
    bool x = false && fail();
}

void orTest() {
    bool x = true || fail();
}

void main() {
    andTest();
    orTest();
}
