engr441/while-jvm/tests/invalid-defassign/DefiniteAssign_Invalid_18.while
bool g(bool x) {
    return (x || !x);
}

bool f() {
    bool x;
    return g(x);
}
